<resources>
    <string name="app_name">تاهت و لقيتها</string>
    <string name="map_api_key">AIzaSyAnjvMAJEmiAv3yeCDUXWv-PboXiT_uaoQ</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="subject">Subject</string>
    <string name="message">Message</string>
    <string name="send">Send</string>
    <string name="home">Home</string>
    <string name="nearby">Nearby</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="create_your_account_now">create your account now</string>
    <string name="continue1">Continue</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="no_data_to_show">No data to show</string>
    <string name="phone">Phone Number</string>
    <string name="login">Login</string>
    <string name="terms_and_conditions">Terms and conditions</string>
    <string name="about_us">About us</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="contact_us">Contact us</string>
    <string name="wait">Wait</string>
    <string name="current">Current</string>
    <string name="prev">Previous</string>
    <string name="choose_your_language">Choose your language</string>
    <string name="next">Next</string>
    <string name="notifications">Notifications</string>
    <string name="sign_up">Sign up</string>
    <string name="update">Update</string>
    <string name="please_enter_code_sent_to">please enter code sent to</string>
    <string name="resend">Resend</string>
    <string name="confirm">Confirm</string>
    <string name="confirmation_code">Confirmation code</string>
    <string name="search">Search...</string>
    <string name="rate_app">Rate App</string>
    <string name="settings">Settings</string>
    <string name="change_language">Change language</string>
    <string name="sorry">Sorry !</string>
    <string name="more">More</string>
    <string name="details">Details</string>
    <string name="please_enter_the_verification_code_sent_to">Please enter the verification code sent to</string>
    <string name="user_blocked">User Blocked</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="cancel">Cancel</string>
    <string name="perm_image_denied">Permission image denied</string>
    <string name="user_found">User Found</string>
    <string name="suc">Success</string>
    <string name="all">All</string>
    <string name="no_search_result">No search result</string>
    <string name="please_choose_country">Please Choose Country</string>
    <string name="you_can_change_country_from_settings">You can change country from settings</string>
    <string name="egypt">Egypt</string>
    <string name="saudi_arabia">Saudi Arabia</string>
    <string name="united_arab_emirates">United Arab Emirates</string>
    <string name="lost">Lost</string>
    <string name="found">Found</string>
    <string name="my_ads">My Ads</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="what_are_you_looking_for">What are you looking for ?</string>
    <string name="post_your_ad">Post Your Ad</string>
    <string name="now">Now</string>
    <string name="missing_things_in_nthe_great_mosque_nof_mecca">Missing things in\nthe Great Mosque\nof Mecca</string>
    <string name="missing_things_in_nthe_tower">Missing things in\nthe Tower Khalifa</string>

    <string name="found_things_in_nthe_great_mosque_nof_mecca">Found things in\nthe Great Mosque\nof Mecca</string>
    <string name="found_things_in_nthe_tower">Found things in\nthe Tower Khalifa</string>

    <string name="missing_things_in_mecca">Missing things in the Great Mosque of Mecca</string>
    <string name="missing_things_in_tower">Missing things in the Tower Khalifa</string>
    <string name="found_things_in_mecca">Found things in the Great Mosque of Mecca</string>
    <string name="found_things_in_tower">Found things in the Tower Khalifa</string>
    <string name="potential_ads">Potential Ads</string>
    <string name="view">View</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>

    <string name="share_app">Share App</string>
    <string name="follow_us">Follow Us</string>
    <string name="inv_link">Invalid link</string>
    <string name="related_products">Related products</string>
    <string name="welcome_back">Welcome Back !</string>
    <string name="we_sent_an_code_to_verify_yor_phone">We sent an code to verify yor phone</string>
    <string name="enter_your_verification_code">Enter your verification code</string>
    <string name="verify">Verify</string>
    <string name="ch_country">Change Country</string>
    <string name="user_name">UserName</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last Name</string>
    <string name="let_s_start">Let\'s Start</string>
    <string name="choose_photo">Choose photo</string>
    <string name="agree_terms"><![CDATA[Agree to the <font color="#EA630B">Terms And Conditions</font>]]></string>
    <string name="ad_type">Ad Type</string>
    <string name="you_lost_something">you lost something</string>
    <string name="you_found_something">you found something</string>
    <string name="ad_photos">AD Photos</string>
    <string name="max_img">A maximum of 4 photos ...</string>
    <string name="ad_title">AD Title</string>
    <string name="example">example: iPhone x plus</string>
    <string name="ad_desc">AD Descriptions</string>
    <string name="write_here">Write here ...</string>
    <string name="main_cat">Main Category</string>
    <string name="sub_cat">Sub Category</string>
    <string name="location">Location</string>
    <string name="publish">Publish</string>
    <string name="back">Back</string>
    <string name="thing_great_mosq">Things in the Great Mosque of Mecca</string>
    <string name="thing_great_tower">Things in the khalifa tower</string>
    <string name="whatsapp_num">Whatsapp Number</string>
    <string name="no_item">No Items To Show</string>
    <string name="no_notify">No Notifications To Show</string>
    <string name="add_deleted">Add deleted successfully</string>
    <string name="ph_found">Phone exist</string>
    <string name="em_found">Email exist</string>
    <string name="posting_ad">Posting ad....</string>

    <string name="field_required">field required</string>
    <string name="inv_email">Invalid Email</string>
    <string name="follow">Follow</string>
    <string name="un_follow">Un Follow</string>
    <string name="attachment_sent">Attachment sent</string>
    <string name="conversations">Conversations</string>
    <string name="no_conv">No Conversations</string>
    <string name="type_a_message">Type a message ...</string>
    <string name="not_avail_now">Not Available Now</string>
    <string name="filter_by">Filter by :</string>
    <string name="city">City</string>
    <string name="recent_added">Recently added</string>
    <string name="apply">Apply</string>
    <string name="closed_ads">Closed Ads</string>
    <string name="km">km</string>
    <string name="cities">Cities</string>
    <string name="search_for_city">Search for city...</string>
    <string name="clear">Clear</string>
    <string name="unfollowed">Unfollowed</string>
    <string name="followed">Followed</string>
    <string name="fav">Favourite</string>
    <string name="unfav">Un Favourite</string>
    <string name="reported">Reported</string>
    <string name="un_reported">Un Reported</string>
    <string name="governorate">Governorate</string>
    <string name="favs">Favorites</string>

    <array name="lastDays">
        <item>"Choose"</item>
        <item>"Last day"</item>
        <item>"Last 3 days"</item>
        <item>"Last a week"</item>
        <item>"Last a month"</item>
        <item>"All times"</item>
    </array>

</resources>