<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="country"
            type="String" />

    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        tools:context=".uis.activity_country.CountryActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <ImageView
                android:layout_width="128dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="60dp"
                android:src="@drawable/logo"

                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="64dp"
                android:fontFamily="@font/font_bold"
                android:text="@string/please_choose_country"
                android:textColor="@color/color1"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="3dp"
                android:fontFamily="@font/font_regular"
                android:text="@string/you_can_change_country_from_settings"
                android:textColor="@color/colorPrimary"
                android:textSize="14sp" />

            <LinearLayout
                android:id="@+id/llEg"
                android:layout_width="match_parent"
                android:layout_height="68dp"
                android:layout_marginTop="44dp"
                android:background='@{country.equals("eg")?@drawable/small_stroke_primary:@drawable/small_stroke_grey}'
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingStart="16dp"
                android:paddingEnd="16dp">

                <ImageView
                    android:layout_width="54dp"
                    android:layout_height="36dp"
                    android:src="@drawable/egypt" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:fontFamily="@font/font_regular"
                    android:text="@string/egypt"
                    android:textColor="@color/black"
                    android:textSize="16sp"

                    />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llSa"
                android:layout_width="match_parent"
                android:layout_height="68dp"
                android:layout_marginTop="8dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:background='@{country.equals("sa")?@drawable/small_stroke_primary:@drawable/small_stroke_grey}'
                >

                <ImageView
                    android:layout_width="54dp"
                    android:layout_height="36dp"
                    android:src="@drawable/saudi_arabia" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:fontFamily="@font/font_regular"
                    android:text="@string/saudi_arabia"
                    android:textColor="@color/black"
                    android:textSize="16sp"

                    />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llUae"
                android:layout_width="match_parent"
                android:layout_height="68dp"
                android:layout_marginTop="8dp"
                android:background='@{country.equals("uae")?@drawable/small_stroke_primary:@drawable/small_stroke_grey}'
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingStart="16dp"
                android:paddingEnd="16dp">

                <ImageView
                    android:layout_width="54dp"
                    android:layout_height="36dp"
                    android:src="@drawable/emirates" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:fontFamily="@font/font_regular"
                    android:text="@string/united_arab_emirates"
                    android:textColor="@color/black"
                    android:textSize="16sp"

                    />
            </LinearLayout>

            <Button
                android:id="@+id/btnConfirm"
                android:layout_width="230dp"
                android:layout_height="48dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="8dp"
                android:layout_marginTop="36dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/small_rounded_primary"
                android:fontFamily="@font/font_regular"
                android:text="@string/confirm"
                android:textColor="@color/white"
                android:textSize="16sp" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</layout>
