<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="lang"
            type="String" />
        <variable
            name="city"
            type="String" />

    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:fontFamily="@font/font_bold"
                android:text="@string/filter_by"
                />
            <androidx.legacy.widget.Space
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"/>
            <ImageView
                android:id="@+id/close"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_close"
                android:padding="3dp"
                />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:background="@color/grey1"
            />
        <LinearLayout
            android:id="@+id/llCity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:text="@string/city"
                android:fontFamily="@font/font_regular"

                />
            <androidx.legacy.widget.Space
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"
                />

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:textSize="14sp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text='@{city??""}'
                android:fontFamily="@font/font_regular"
                />
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_right_arrow"
                android:padding="3dp"
                app:tint="@color/colorPrimary"
                android:rotation='@{lang.equals("ar")?180:0}'
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:layout_marginTop="16dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:text="@string/recent_added"
                android:fontFamily="@font/font_regular"
                />
            <androidx.legacy.widget.Space
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="150dp"
                android:layout_height="wrap_content"

                />

        </LinearLayout>

        <Button
            android:id="@+id/btnApply"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/small_rounded_primary"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:text="@string/apply"
            android:fontFamily="@font/font_regular"
            />

    </LinearLayout>
</layout>